# planning-depth-differences

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  requirements-cluster.txt  requirements.txt  spm_BMS_for_me.m
analysis/questionnaire/: 01_Recalculate_reduced_factor_weights.ipynb  02_Explore_dimensionality.ipynb  Makefile  README.md
cluster/src/: cluster_utils.py  combine_trajectories.py  extract_best_parameters.py  extract_best_parameters_positive.py  extract_marginal_likelihood_and_hdis.py  extract_marginal_likelihood_and_hdis_positive.py  find_lost_files.py  find_lost_q_files.py  fit_mcrl_models.py  generate_parameter_recovery_parameter_settings.py  get_bmps_rollouts.py  (+23 more)
data/: Preprocessing_c1.1.ipynb  Preprocessing_c2.1.ipynb  Preprocessing_irl_validation.ipynb  Preprocessing_methods_main.ipynb  Preprocessing_quest_first_modified.ipynb  Preprocessing_quest_main.ipynb  Preprocessing_quest_pilot_modified.ipynb  Preprocessing_quest_second_modified.ipynb  README.md
scratch/: bmps_vs_q.py  bmps_weights.py  test_extended_hashing.py
submodules/mcl_toolbox/: MANIFEST.in  pyproject.toml  requirements.txt  version.py
submodules/mcl_toolbox/mcl_toolbox/: global_vars.py
submodules/mcl_toolbox/mcl_toolbox/computational_microscope/: computational_microscope.py
submodules/mcl_toolbox/mcl_toolbox/env/: modified_mouselab.py
submodules/mcl_toolbox/mcl_toolbox/utils/: experiment_utils.py  feature_normalization.py  learning_utils.py  planning_strategies.py  sequence_utils.py
tests/: plot_test_environments.py  test_cost_functions.py  test_q.py
(+860 files in other folders)
