# Project
[project]
name = "mcl_toolbox"
description = "Specific MCL Toolbox Files."
dynamic = ["dependencies", "readme", "version"]
requires-python = ">=3.7"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
readme = { file = "README.md" }
version = { attr = "version.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["mcl_toolbox*"]
